--- a/content/projects/projects-single.html
+++ b/content/projects/projects-single.html
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Construction Html5 Template">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <link rel="icon" type="image/png" href="images/favicon.png">
-  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="plugins/animate-css/animate.css">
-  <link rel="stylesheet" href="plugins/slick/slick.css">
-  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="plugins/colorbox/colorbox.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
+  <link rel="stylesheet" href="../../plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../../plugins/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="../../plugins/animate-css/animate.css">
+  <link rel="stylesheet" href="../../plugins/slick/slick.css">
+  <link rel="stylesheet" href="../../plugins/slick/slick-theme.css">
+  <link rel="stylesheet" href="vplugins/colorbox/colorbox.css">
+  <link rel="stylesheet" href="../../css/style.css">
 </head>
 
 <body>
@@ -51,8 +51,8 @@
           <div class="logo-area">
             <div class="row align-items-center">
               <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
-                <a class="d-block" href="index.html">
-                  <img loading="lazy" src="images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
+                <a class="d-block" href="../../index.html">
+                  <img loading="lazy" src="../../images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
                 </a>
               </div>
               <div class="col-lg-9 header-right">
@@ -83,7 +83,7 @@
                     </div>
                   </li>
                   <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="contact.html">Fiyat Teklifi Alın</a>
+                    <a class="btn btn-primary" href="../../contact.html">Fiyat Teklifi Alın</a>
                   </li>
                 </ul>
               </div>
@@ -104,34 +104,34 @@
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item">
-                      <a href="index.html" class="nav-link">Anasayfa</a>
+                      <a href="../../index.html" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
                           class="fa fa-angle-down"></i></a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="about.html">Hakkımızda</a></li>
-                        <li><a href="team.html">Ekibimiz</a></li>
-                        <li><a href="testimonials.html">Müşterilerimiz</a></li>
-                        <li><a href="faq.html">SSO</a></li>
-                        <li><a href="pricing.html">Fiyat Politikamız</a></li>
+                        <li><a href="../../about.html">Hakkımızda</a></li>
+                        <li><a href="../../team.html">Ekibimiz</a></li>
+                        <li><a href="../../testimonials.html">Müşterilerimiz</a></li>
+                        <li><a href="../../faq.html">SSO</a></li>
+                        <li><a href="../../pricing.html">Fiyat Politikamız</a></li>
                       </ul>
                     </li>
                     <li class="nav-item dropdown active">
                       <a href="#" class="nav-link active dropdown-toggle" data-toggle="dropdown">Projelerimiz <i
                           class="fa fa-angle-down"></i></a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="projects.html">Projelerimiz</a></li>
-                        <li><a href="projects-single.html">Proje Detay Sayfası</a></li>
+                        <li><a href="../../projects.html">Projelerimiz</a></li>
+                        <li><a href="../../projects-single.html">Proje Detay Sayfası</a></li>
                       </ul>
                     </li>
                     <li class="nav-item">
-                      <a href="services.html" class="nav-link">Hizmetlerimiz</a>
+                      <a href="../../services.html" class="nav-link">Hizmetlerimiz</a>
                     </li>
                     <li class="nav-item">
-                      <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
+                      <a href="../../news.html" class="nav-link">Şirketimizden Haberler</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../../contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </nav>
@@ -140,7 +140,7 @@
         </div>
       </div>
     </header>
-    <div id="banner-area" class="banner-area" style="background-image:url(images/banner/banner1.jpg)">
+    <div id="banner-area" class="banner-area" style="background-image:url(../../images/banner/banner1.jpg)">
       <div class="banner-text">
         <div class="container">
           <div class="row">
@@ -149,8 +149,8 @@
                 <h1 class="banner-title">Project</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Project</a></li>
+                    <li class="breadcrumb-item"><a href="../../index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item"><a href="../../projects.html">Projelerimiz</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Projects Single</li>
                   </ol>
                 </nav>
@@ -166,10 +166,10 @@
           <div class="col-lg-8">
             <div id="page-slider" class="page-slider small-bg">
               <div class="item">
-                <img loading="lazy" class="img-fluid" src="images/projects/project5.jpg" alt="project-image" />
+                <img loading="lazy" class="img-fluid" src="../../images/projects/project5.jpg" alt="project-image" />
               </div>
               <div class="item">
-                <img loading="lazy" class="img-fluid" src="images/projects/project4.jpg" alt="project-image" />
+                <img loading="lazy" class="img-fluid" src="../../images/projects/project4.jpg" alt="project-image" />
               </div>
             </div>
           </div>
@@ -217,7 +217,7 @@
           <div class="row justify-content-between">
             <div class="col-lg-4 col-md-6 footer-widget footer-about">
               <h3 class="widget-title">Hakkımızda</h3>
-              <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png"
+              <img loading="lazy" width="200px" class="footer-logo" src="../../images/mecra-logo-beyaz.png"
                 alt="Mecra Proje Logo">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
                 labore et dolore magna aliqua.</p>
@@ -241,11 +241,11 @@
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
               <h3 class="widget-title">Hizmetlerimiz</h3>
               <ul class="list-arrow">
-                <li><a href="service-single.html">Pre-Construction</a></li>
-                <li><a href="service-single.html">General Contracting</a></li>
-                <li><a href="service-single.html">Construction Management</a></li>
-                <li><a href="service-single.html">Design and Build</a></li>
-                <li><a href="service-single.html">Self-Perform Construction</a></li>
+                <li><a href="../../service-single.html">Pre-Construction</a></li>
+                <li><a href="../../service-single.html">General Contracting</a></li>
+                <li><a href="../../service-single.html">Construction Management</a></li>
+                <li><a href="../../service-single.html">Design and Build</a></li>
+                <li><a href="../../service-single.html">Self-Perform Construction</a></li>
               </ul>
             </div>
           </div>
@@ -266,11 +266,11 @@
             <div class="col-md-6">
               <div class="footer-menu text-center text-md-right">
                 <ul class="list-unstyled">
-                  <li><a href="about.html">Hakkımızda</a></li>
-                  <li><a href="team.html">Ekibimiz</a></li>
-                  <li><a href="faq.html">Sıkça Sorulan Sorular</a></li>
-                  <li><a href="news-left-sidebar.html">Blog</a></li>
-                  <li><a href="pricing.html">Fiyat Politikamız</a></li>
+                  <li><a href="../../about.html">Hakkımızda</a></li>
+                  <li><a href="../../team.html">Ekibimiz</a></li>
+                  <li><a href="../../faq.html">Sıkça Sorulan Sorular</a></li>
+                  <li><a href="../../news-left-sidebar.html">Blog</a></li>
+                  <li><a href="../../pricing.html">Fiyat Politikamız</a></li>
                 </ul>
               </div>
             </div>
@@ -283,15 +283,15 @@
         </div>
       </div>
     </footer>
-    <script src="plugins/jQuery/jquery.min.js"></script>
-    <script src="plugins/bootstrap/bootstrap.min.js" defer></script>
-    <script src="plugins/slick/slick.min.js"></script>
-    <script src="plugins/slick/slick-animation.min.js"></script>
-    <script src="plugins/colorbox/jquery.colorbox.js"></script>
-    <script src="plugins/shuffle/shuffle.min.js" defer></script>
+    <script src="../../plugins/jQuery/jquery.min.js"></script>
+    <script src="../../plugins/bootstrap/bootstrap.min.js" defer></script>
+    <script src="../../plugins/slick/slick.min.js"></script>
+    <script src="../../plugins/slick/slick-animation.min.js"></script>
+    <script src="../../plugins/colorbox/jquery.colorbox.js"></script>
+    <script src="../../plugins/shuffle/shuffle.min.js" defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
-    <script src="plugins/google-map/map.js" defer></script>
-    <script src="js/script.js"></script>
+    <script src="../../plugins/google-map/map.js" defer></script>
+    <script src="../../js/script.js"></script>
   </div>
 </body>
 
