--- a/projects.html
+++ b/projects.html
@@ -141,12 +141,11 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">Project</h1>
+                <h1 class="banner-title">Projelerimiz</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Project</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">All Projects</li>
+                    <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Projelerimiz</li>
                   </ol>
                 </nav>
               </div>
@@ -161,7 +160,7 @@
           <div class="col-12">
             <div class="shuffle-btn-group">
               <label class="active" for="all">
-                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">Show All
+                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">Hepsi
               </label>
               <label for="commercial">
                 <input type="radio" name="shuffle-filter" id="commercial" value="commercial">Commercial
@@ -193,7 +192,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Capital Teltway Building</a>
+                        <a href="./content/projects/projects-single.html">Capital Teltway Building</a>
                       </h3>
                       <p class="project-cat">Commercial, Interiors</p>
                     </div>
@@ -209,7 +208,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Ghum Touch Hospital</a>
+                        <a href="./content/projects/projects-single.html">Ghum Touch Hospital</a>
                       </h3>
                       <p class="project-cat">Healthcare</p>
                     </div>
@@ -226,7 +225,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">TNT East Facility</a>
+                        <a href="./content/projects/projects-single.html">TNT East Facility</a>
                       </h3>
                       <p class="project-cat">Government</p>
                     </div>
@@ -243,7 +242,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Narriot Headquarters</a>
+                        <a href="./content/projects/projects-single.html">Narriot Headquarters</a>
                       </h3>
                       <p class="project-cat">Infrastructure</p>
                     </div>
@@ -260,7 +259,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Kalas Metrorail</a>
+                        <a href="./content/projects/projects-single.html">Kalas Metrorail</a>
                       </h3>
                       <p class="project-cat">Infrastructure</p>
                     </div>
@@ -276,7 +275,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Ancraft Avenue House</a>
+                        <a href="./content/projects/projects-single.html">Ancraft Avenue House</a>
                       </h3>
                       <p class="project-cat">Residential</p>
                     </div>
@@ -285,10 +284,19 @@
               </div>
             </div>
           </div>
-          <div class="col-12">
-            <div class="general-btn text-center">
-              <a class="btn btn-primary" href="projects.html">View All Projects</a>
-            </div>
+        </div>
+      </div>
+    </section>
+    <section class="call-to-action classic">
+      <div class="row align-items-center">
+        <div class="col-md-8 text-center text-md-left">
+          <div class="call-to-action-text">
+            <h3 class="action-title" style="color: #ffb600;">Sormak İstediğiniz Sorular Mı? Hemen Bize Ulaşın!</h3>
+          </div>
+        </div>
+        <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
+          <div class="call-to-action-btn">
+            <a class="btn btn-primary" href="contact.html">İletişime Geç</a>
           </div>
         </div>
       </div>
