--- a/contact.html
+++ b/contact.html
@@ -95,8 +95,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown active">
-                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
+                    <li class="nav-item dropdown">
+                      <a href="index.html" class="nav-link" data-toggle="dropdown">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
@@ -118,7 +118,7 @@
                     <li class="nav-item">
                       <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
+                    <li class="nav-item active"><a class="nav-link active" href="contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </nav>
