--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
           <div class="row align-items-center">
             <div class="col-md-8 text-center text-md-left">
               <div class="call-to-action-text">
-                <h3 class="action-title">We understand your needs on construction</h3>
+                <h3 class="action-title">İç Mimari Tasarım/İç Mekan Tasarım/Mimari Projeler</h3>
               </div>
             </div>
             <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
               <div class="call-to-action-btn">
-                <a class="btn btn-dark" href="contact.html">Fiyat Teklifi Al</a>
+                <a class="btn btn-dark" href="https://wa.me/905078913738" target="_blank">Fiyat Teklifi Al</a>
               </div>
             </div>
           </div>
