--- a/about.html
+++ b/about.html
@@ -141,93 +141,10 @@
     <section id="main-container" class="main-container">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-12">
             <h3 class="column-title">Mecra Proje</h3>
-            <p>when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible
-              vermin.</p>
-            <blockquote>
-              <p>Semporibus autem quibusdam et aut officiis debitis aut rerum est aut optio cumque nihil necessitatibus
-                autemn ec tincidunt nunc posuere ut</p>
-            </blockquote>
-            <p>He lay on his armour-like back, and if he lifted. ultrices ultrices sapien, nec tincidunt nunc posuere
-              ut. Lorem ipsum dolor sit amet, consectetur adipiscing elit. If you are going to use a passage of Lorem
-              Ipsum, you need to be sure there isn’t anything embarrassing.</p>
+            <p>Mecra Proje Ofisi 2021 yılında mimar ve mühendisler tarafından kurulmuş olup aktif olarak hizmet vermeye devam etmektedir. Dinamik, genç ve çalışkan kadrosuyla her geçen gün büyümekte ve gelişmekte olan firmamız sektörünün trendlerini yakından takip ederek güncel ve konforlu tasarımlara imza atmaktadır. Tasarımdaki gücümüz alternatif çözümler üreterek özgün, modern ve güncel fikirler ortaya koymak ve bunları uygulamaya geçirmektir. Firmamız proje ve tasarımın yanı sıra her türlü saha uygulamalarını da en ince ayrıntısına kadar itina ile yürütmektedir. </p>
           </div>
-          <div class="col-lg-6 mt-5 mt-lg-0">
-            <div id="page-slider" class="page-slider small-bg">
-              <div class="item" style="background-image:url(images/slider-pages/slide-page1.jpg)">
-                <div class="container">
-                  <div class="box-slider-content">
-                    <div class="box-slider-text">
-                      <h2 class="box-slide-title">Leadership</h2>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              < <div class="item" style="background-image:url(images/slider-pages/slide-page2.jpg)">
-                <div class="container">
-                  <div class="box-slider-content">
-                    <div class="box-slider-text">
-                      <h2 class="box-slide-title">Relationships</h2>
-                    </div>
-                  </div>
-                </div>
-            </div>
-            <div class="item" style="background-image:url(images/slider-pages/slide-page3.jpg)">
-              <div class="container">
-                <div class="box-slider-content">
-                  <div class="box-slider-text">
-                    <h2 class="box-slide-title">Performance</h2>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="facts" class="facts-area dark-bg">
-      <div class="container">
-        <div class="facts-wrapper">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 ts-facts">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact1.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="1789">0</span></h2>
-                <h3 class="ts-facts-title">Toplam Proje</h3>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-sm-0">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact2.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="647">0</span></h2>
-                <h3 class="ts-facts-title">Staff Members</h3>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact3.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="4000">0</span></h2>
-                <h3 class="ts-facts-title">Hours of Work</h3>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact4.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="44">0</span></h2>
-                <h3 class="ts-facts-title">Hizmet Verdiğimiz Ülkeler</h3>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
     <section id="ts-team" class="ts-team">
@@ -244,17 +161,13 @@
               <div class="item">
                 <div class="ts-team-wrapper">
                   <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/team1.jpg" alt="team-img">
+                    <img loading="lazy" class="w-100" src="images/team/mehmet-sahin-mimar-mecra-proje.png" alt="team-img">
                   </div>
                   <div class="ts-team-content">
                     <h3 class="ts-name">Mehmet Şahin</h3>
                     <p class="ts-designation">Mimar</p>
-                    <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                     <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                      <a target="_blank" href="https://tr.linkedin.com/in/mehmetsahinmimar"><i class="fab fa-linkedin"></i></a>
                     </div>
                   </div>
                 </div>
@@ -262,16 +175,13 @@
               <div class="item">
                 <div class="ts-team-wrapper">
                   <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/team2.jpg" alt="team-img">
+                    <img loading="lazy" class="w-100" src="images/team/ibrahim-tarik-sen-insaat-muhendisi-mecra-proje.png.png" alt="team-img">
                   </div>
                   <div class="ts-team-content">
                     <h3 class="ts-name">İbrahim Tarık Şen</h3>
                     <p class="ts-designation">İnşaat Mühendisi</p>
-                    <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                     <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                      <a target="_blank" href="https://tr.linkedin.com/in/ibrahim-tar%C4%B1k-%C5%9Fen-43a9621bb"><i class="fab fa-linkedin"></i></a>
                     </div>
                   </div>
                 </div>
@@ -279,16 +189,13 @@
               <div class="item">
                 <div class="ts-team-wrapper">
                   <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/team3.jpg" alt="team-img">
+                    <img loading="lazy" class="w-100" src="images/team/mustafa-abay-elektrik-elektronik-muhendisi-mecra-proje.png.png" alt="team-img">
                   </div>
                   <div class="ts-team-content">
                     <h3 class="ts-name">Mustafa Abay</h3>
                     <p class="ts-designation">Elektrik Elektronik Mühendisi</p>
-                    <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                     <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                      <a target="_blank" href="https://tr.linkedin.com/in/mustafa-abay-0258b7194"><i class="fab fa-linkedin"></i></a>
                     </div>
                   </div>
                 </div>
