--- a/404.html
+++ b/404.html
@@ -161,38 +161,23 @@
       <div class="footer-main">
         <div class="container">
           <div class="row justify-content-between">
-            <div class="col-lg-4 col-md-6 footer-widget footer-about">
+            <div class="col-lg-12 col-md-6 footer-widget footer-about">
               <h3 class="widget-title">Hakkımızda</h3>
               <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png"
                 alt="Mecra Proje Logo">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
-                labore et dolore magna aliqua.</p>
+              <p>Mecra Proje Ofisi 2021 yılında mimar ve mühendisler tarafından kurulmuş olup aktif olarak hizmet vermeye devam etmektedir.</p>
               <div class="footer-social">
                 <ul>
                   <li><a href="https://www.instagram.com/mecraproje/" aria-label="Instagram" target="_blank"><i
                         class="fab fa-instagram"></i></a></li>
                   <li><a href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" aria-label="Linkedin"
                       target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                  <li><a href="https://www.pinterest.jp/mecraproje/" aria-label="Pinterest"
+                        target="_blank"><i class="fab fa-pinterest"></i></a></li>
+                  <li><a href="https://www.youtube.com/channel/UCzKqpejn_635Mgh_ZYRyhAg/featured" aria-label="Youtube"
+                          target="_blank"><i class="fab fa-youtube"></i></a></li>
                 </ul>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
-              <h3 class="widget-title">Çalışma Saatlerimiz</h3>
-              <div class="working-hours">
-                We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our
-                Hotline and Contact form.
-                <br><br> Pazartesi - Cumartesi: <span class="text-right">8:00 - 19:00 </span>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
-              <h3 class="widget-title">Hizmetlerimiz</h3>
-              <ul class="list-arrow">
-                <li><a href="service-single.html">Pre-Construction</a></li>
-                <li><a href="service-single.html">General Contracting</a></li>
-                <li><a href="service-single.html">Construction Management</a></li>
-                <li><a href="service-single.html">Design and Build</a></li>
-                <li><a href="service-single.html">Self-Perform Construction</a></li>
-              </ul>
             </div>
           </div>
         </div>
@@ -214,9 +199,6 @@
                 <ul class="list-unstyled">
                   <li><a href="about.html">Hakkımızda</a></li>
                   <li><a href="team.html">Ekibimiz</a></li>
-                  <li><a href="faq.html">Sıkça Sorulan Sorular</a></li>
-                  <li><a href="news-left-sidebar.html">Blog</a></li>
-                  <li><a href="pricing.html">Fiyat Politikamız</a></li>
                 </ul>
               </div>
             </div>
